--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
                     </div>
                     <div class="social_icons">
                         <div class="icon"><a class="bi bi-telephone-fill" href="tel:+91851780927"></a></div>
-                        <div class="icon"><a class="bi bi-linkedin"
-                                href="https://www.instagram.com/patilro_hit?igsh=MWpzOG83M3lyMXlyNw=="
-                                target="_blank"></a></div>
+                        <div class="icon"><a class="bi bi-linkedin" href="https://www.instagram.com/patilro_hit?igsh=MWpzOG83M3lyMXlyNw==" target="_blank"></a></div>
                         <div class="icon"><a class="bi bi-envelope-fill" href="mailto:rohitpatil15121998@gmail.com"></a>
                         </div>
                         <div class="icon"><a class="bi bi-github" href="https://rohit-patil15.github.io/ui-portfolio/"
