--- a/swadeshi-order/order-sucess.html
+++ b/swadeshi-order/order-sucess.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <div>
-    <h3>Your Order is Confirm Successfully...</h3>
+    <h3>Your Order Confirm Successfully...</h3>
 </div>   
 <div>
     <a href="./swadeshi-order.html"><button class="btn btn-primary">Back Home</button></a>
