--- a/swadeshi-order/swadeshi-order.html
+++ b/swadeshi-order/swadeshi-order.html
@@ -439,7 +439,11 @@
                                 <img id="imgMeal" width="100%">
         
                             </div>
+                          <div>
                             <a href="./order-sucess.html"><button class="btn btn-outline-primary" >Confirm</button></a>
+                            <a href="./swadeshi-order.html"><button class="btn btn-outline-warning">Edit Item's</button></a>
+                            <a href="./swadeshi-order.html"><button class="btn btn-outline-danger">Order Cancel</button></a>
+                          </div>
                         </div>
                     </div>
                 </div>
