--- a/swadeshi-order/swadeshi-order.html
+++ b/swadeshi-order/swadeshi-order.html
@@ -86,7 +86,7 @@
             <!--Customer Details-->
             <div class="accordion-item">
                 <div class="accordion-header">
-                    <button data-bs-target="#customer" data-bs-toggle="collapse" class="btn btn-danger w-100">Customer Details</button>
+                    <button data-bs-target="#customer" data-bs-toggle="collapse" class="btn btn-danger w-100">Customer Details<img src="../public/images/down-arrow1.gif"  height="30px"></button>
                 </div>
                 <div class="accordion-collapse p-2 collapse" id="customer" data-bs-parent="#kfc">
                     <div class="accordion-body">
@@ -360,7 +360,7 @@
           <!-- Meal Details -->
           <div class="accordion-item">
              <div class="accordion-header">
-                <button data-bs-target="#meal" data-bs-toggle="collapse" class="btn btn-danger w-100">Select Your Meal</button>
+                <button data-bs-target="#meal" data-bs-toggle="collapse" class="btn btn-danger w-100">Select Your Meal  <img src="../public/images/down-arrow1.gif"  height="30px"></button>
              </div>
              <div class="accordion-collapse collapse" id="meal" data-bs-parent="#kfc">
                 <div class="accordion-body p-2">
@@ -385,7 +385,7 @@
           <!--Add On's-->
           <div class="accordion-item">
              <div class="accordion-header">
-                <button data-bs-target="#adon" data-bs-toggle="collapse" class="btn btn-danger w-100">Select AD-ON's</button>
+                <button data-bs-target="#adon" data-bs-toggle="collapse" class="btn btn-danger w-100">Select AD-ON's &nbsp<img src="../public/images/down-arrow1.gif"  height="30px"></button>
              </div>
              <div class="accordion-collapse collapse" id="adon" data-bs-parent="#kfc">
                 <div class="accordion-body p-2">
@@ -407,7 +407,7 @@
              </div>
           </div>
         </div>
-        <button onclick="PlaceOrderClick()" data-bs-target="#bill" data-bs-toggle="modal" class="btn btn-danger w-100">Place Order</button>
+        <button onclick="PlaceOrderClick()" data-bs-target="#bill" data-bs-toggle="modal" class="btn btn-danger w-100">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="../public/images/down-arrow1.gif"  height="30px"></button>
         <div class="modal fade" id="bill">
             <div class="modal-dialog">
                 <div class="modal-content">
