--- a/shopping-api/fakestore-api.html
+++ b/shopping-api/fakestore-api.html
@@ -113,9 +113,10 @@
                     products.map(function (product) {
                         var div = document.createElement("div");
                         div.className = "card p-2";
-                        div.style.width = "300px";
+                        div.style.width = "280px";
+                        div.style.margin="10px";
                         div.innerHTML = `
-                       <img src=${product.image} class="card-img-top" height="280">
+                       <img src=${product.image} class="card-img-top" height="150">
                        <div class="card-header" style="height:90px; overflow:auto">
                           ${product.title}
                        </div>
@@ -212,7 +213,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header bg-success-subtle">
-                            <h2 class="text-warning">Your Cart</h2>
+                            <h2 class="text-danger">Your Cart</h2>
                             <button class="btn btn-close" data-bs-dismiss="modal"></button>
                         </div>
                         <div class="modal-body">
@@ -229,9 +230,9 @@
                                 </tbody>
                                 <tfooter>
                                    
-                                        <td><button class="btn btn-primary">Confirm Order</button></td>
-                                        <td><button class="btn btn-warning">Add More</button></td>
-                                        <td><button class="btn btn-danger">Cancel Order</button></td>
+                                        <td><button class="btn btn-outline-primary">Confirm Order</button></td>
+                                        <td><button class="btn btn-outline-warning">Add More</button></td>
+                                        <td><button class="btn btn-outline-danger">Cancel Order</button></td>
                                   
                                 </tfooter>
                             </table>
