--- a/bharatiya-culture/bhartiyalogin.html
+++ b/bharatiya-culture/bhartiyalogin.html
@@ -135,7 +135,7 @@
             <p><a href="#"><i class="bi bi-info"></i></a></i>Passwords must be at least 6 characters.</p>
             <div class="para">To verify your number, we will send you a text<br> message with a temporary code. Message
                 and<br>data rates may apply.</div>
-            <button> <a class="nav-link" href="../bharatiya-culture/bharatiyaculture.html">Continue</a></button>
+            <button ><a class="nav-link" href="../bharatiya-culture/bharatiyaculture.html">Continue  <img src="../public/images/gif.gif" width="90px" height="25px"></a></button>
 
             <hr>
             <div>
