--- a/swadeshi-order/swadeshi-order.html
+++ b/swadeshi-order/swadeshi-order.html
@@ -476,7 +476,7 @@ h1 {
             <!--Customer Details-->
             <div class="accordion-item">
                 <div class="accordion-header">
-                    <button data-bs-target="#customer" data-bs-toggle="collapse" class="btn btn-danger w-100">Customer Details<img src="../public/images/down-arrow1.gif"  height="30px"></button>
+                    <button data-bs-target="#customer" data-bs-toggle="collapse" class="btn btn-danger w-100">Customer Details<img src="../public/images/gif.gif"  height="40px"></button>
                 </div>
                 <div class="accordion-collapse p-2 collapse" id="customer" data-bs-parent="#kfc">
                     <div class="accordion-body">
