--- a/bharatiya-culture/bharatiyaculture.html
+++ b/bharatiya-culture/bharatiyaculture.html
@@ -1056,18 +1056,18 @@
         </div>
         <div>
             <nav>
-                <span>Home</span>
-                <span>Catalog</span>
-                <span>Shop</span>
-                <span>Page</span>
-                <span>Blog</span>
-                <span>Docs</span>
+                <a href="#"><span>Home</span></a>
+                <a href="groom.html"><span>Groom</span></a>
+                <a href="brides.html"><span>Brides</span></a>
+                <a href="couples.html"><span>Couples</span></a>
+                <a href="brideaccessories.html"><span>Accessories</span></a>
+                <a href="#"><span>Docs</span></a>
             </nav>
         </div>
         <div>
             <nav>
                 <span class="bi bi-search"></span>
-                <span class="bi bi-person"></span>
+                <a href="../swadeshi-order/Register-login.html"><span class="bi bi-person"></span></a>
                 <span class="bi bi-heart"></span>
                 <span class="bi bi-cart3"><span class="cart-count">5</span></span>
             </nav>
