--- a/farmes-brand/farmers-brand.html
+++ b/farmes-brand/farmers-brand.html
@@ -53,7 +53,7 @@
         
                     <div class="call-cont">
                         <i class="bi bi-cart4"></i>
-                        <i class="bi bi-person"></i>
+                        <a href="../swadeshi-order/Register-login.html"><i class="bi bi-person"></i></a>
                     </div>
                     <div class="searchbar input-group-text">
                         
