--- a/hotel-booking/rajasthan-hotel.html
+++ b/hotel-booking/rajasthan-hotel.html
@@ -36,16 +36,13 @@ document.getElementById("lblTotal").innerHTML=lblTotal.toLocaleString(`en-in`,{s
     <div class="tab-pane active" id="CustmIn">
       <dl class="row mt-3">
         <dt class="col-3 mt-3">Customer Name</dt>
-        <dd class="col-9 mt-3"><input type="text" class="form-control w-25" id="txtNm" placeholder="Text..."><label
-            class="ps-3"></label></dd>
+        <dd class="col-9 mt-3"><input type="text" class="form-control w-25" id="txtNm" placeholder="Text..." required><label class="ps-3"></label></dd>
         <dt class="col-3 mt-3">Check in Date</dt>
-        <dd class="col-9 mt-3"><input type="date" class="form-control w-25" id="Date"><label class="ps-3"></label></dd>
+        <dd class="col-9 mt-3"><input type="date" class="form-control w-25" id="Date" required><label class="ps-3"></label></dd>
         <dt class="col-3 mt-3">Total No of Days</dt>
-        <dd class="col-9 mt-3"><input type="number" class="form-control w-25" id="NumberDays"
-            placeholder="Number..."><label class="ps-3"></label></dd>
+        <dd class="col-9 mt-3"><input type="number" class="form-control w-25" id="NumberDays" placeholder="Number..." required><label class="ps-3"></label></dd>
         <dt class="col-3 mt-3">Total No of Persons</dt>
-        <dd class="col-9  mt-3"><input type="number" class="form-control w-25" id="NumberPerson"
-            placeholder="Number..."><label class="ps-3"></label></dd>
+        <dd class="col-9  mt-3"><input type="number" class="form-control w-25" id="NumberPerson" placeholder="Number..." required><label class="ps-3"></label></dd>
       </dl>
     </div>
 
