--- a/swadeshi-order/Register-login.html
+++ b/swadeshi-order/Register-login.html
@@ -12,17 +12,40 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
         <style>
+            header{
+                background-color: aquamarine;
+                height: 100px;
+            }
+            h2{
+                margin-top: 30px;
+                font-family:'Times New Roman', Times, serif;
+            }
             .buttons{
                 padding: 20px;
-                margin: 50px;       
+                margin: 50px;   
+                text-align: center;    
             }
+            div p{
+            border:1px solid red;
+            box-shadow: 0 10px 0 0;
             
+            }
         </style>
 </head>
 <body>
-            <div class="buttons">
-                <button class="btn btn-warning">Register New Account</button>
-                <button class="btn btn-primary">Login</button>
-            </div>
+    <header>
+        <marquee><h2>Indian Tranding Website </h2></marquee>
+    </header>
+    <div class="buttons">
+        <a href="../regitration-login/regitration.html"><button class="btn btn-warning">Register New Account</button></a>
+        <a href="../regitration-login/login.html"><button class="btn btn-primary">Login</button></a>
+    </div>
+    <div>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+    </div>
 </body>
 </html>
