--- a/swadeshi-order/order-sucess.html
+++ b/swadeshi-order/order-sucess.html
@@ -12,13 +12,23 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <style>
+       
         h3{
-            color: red;
+            margin: 150px 0px 0px 450px;
             font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             text-align: center;
-            margin-top: 50px;
+            padding: 60px;
+            border:1px solid black;
+            box-shadow: 10px 1px 15px 5px;
+            width: 500px;
+            height: 200px;    
+            color:green;
+            cursor: no-drop;
         }
        
+        h3:hover{
+            color:lightcoral;
+        }
     </style>
 </head>
 <body>
