--- a/hotel-booking/rajasthan-hotel.html
+++ b/hotel-booking/rajasthan-hotel.html
@@ -44,8 +44,7 @@ document.getElementById("lblTotal").innerHTML=lblTotal.toLocaleString(`en-in`,{s
         <dt class="col-3 mt-3">Total No of Persons</dt>
         <dd class="col-9  mt-3"><input type="number" class="form-control w-25" id="NumberPerson" placeholder="Number..." required><label class="ps-3"></label></dd>
       </dl>
-    </div>
-
+    </div>;
     <!-- Select Room -->
     <div class="tab-pane mt-3" id="Roomtyp">
       <div class="row bg-primary-subtle">
