--- a/video-library/video-library.html
+++ b/video-library/video-library.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-in">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,31 +12,69 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-   <style>
-    body{
-       
-        background-image: url('../public/images/video-library.jpg');
-        background-repeat: no-repeat;
-    }
-    .heading{
-        font-style:oblique;
-        font-size:40px; 
-        background-color: aqua;   
-    }
-    .btn{
-        background-color:gold;
-        text-decoration: none;
-    }
-   </style>
+    <style>
+        header {
+            background-color: aqua;
+            padding: 20px;
+        }
+
+        section {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        h1 {
+            margin-bottom: 20px;
+        }
+
+        #timer {
+            font-size: 2em;
+            font-weight: bold;
+        }
+
+        #timer span {
+            display: inline-block;
+            width: 50px;
+            padding: 10px;
+            background: #ddd;
+            margin: 5px;
+            border-radius: 5px;
+        }
+    </style>
 </head>
+
 <body>
     <header>
-        <h1 class="heading">
-            <marquee>Comming Soon...</marquee>
-        </h1>
+        <marquee>
+            <h2>Comming Soon...</h2>
+        </marquee>
     </header>
     <section>
-        <button class="btn bi bi-arrow-left"><a href="../index.html" style="text-decoration: none;"> Back Home</a></button>
+        <div class="container">
+            <h1>Countdown Timer</h1>
+            <div id="timer">
+                <span id="days">00</span>:
+                <span id="hours">00</span>:
+                <span id="minutes">00</span>:
+                <span id="seconds">00</span>
+            </div>
+            <button class="btn bi bi-arrow-left btn btn-outline-primary"><a href="../index.html" style="text-decoration: none;"> Back Home</a></button>
+        </div>
     </section>
+    <script src="../video-library/count.js"></script>
 </body>
+
 </html>
