--- a/farmes-brand/farmers-brand.html
+++ b/farmes-brand/farmers-brand.html
@@ -140,7 +140,7 @@
                             overall health. Good choices include oranges, blueberries, apples, avocados, and bananas, but there
                             are many more to choose from.
                         </p>
-                        <button class="btn">Read More</button>
+                        <a href="../farmes-brand/more-detailsorganicfoods.html"><button class="btn">Read More</button></a>
                     </div>
                     <div class="card">
                         <i class="bi bi-apple"></i>
@@ -150,7 +150,7 @@
                             overall health. Good choices include oranges, blueberries, apples, avocados, and bananas, but there
                             are many more to choose from.
                         </p>
-                        <button class="btn">Read More</button>
+                        <a href="../farmes-brand/readme-dryfruits.html"><button class="btn">Read More</button></a>
                     </div>
                     <div class="card">
                         <i class="bi bi-basket"></i>
@@ -160,7 +160,7 @@
                             overall health. Good choices include oranges, blueberries, apples, avocados, and bananas, but there
                             are many more to choose from.
                         </p>
-                        <button class="btn">Read More</button>
+                        <a href="../farmes-brand/more-detailsorganicfoods.html"><button class="btn">Read More</button></a>
                     </div>
                     <div class="card">
                         <i class="bi bi-handbag-fill"></i>
@@ -170,7 +170,7 @@
                             overall health. Good choices include oranges, blueberries, apples, avocados, and bananas, but there
                             are many more to choose from.
                         </p>
-                        <button class="btn">Read More</button>
+                        <a href="../farmes-brand/more-detailsorganicfoods.html"><button class="btn">Read More</button></a>
                     </div>
                     <div class="card">
                         <i class="bi bi-tree-fill"></i>
@@ -190,7 +190,7 @@
                             ensure transparency in the food supply chain if you support Indian Farmer's they will give natural
                             foods & Vegetables.
                         </p>
-                        <button class="btn">Read More</button>
+                        <a href=""><button class="btn">Read More</button></a>
                     </div>
                 </div>
             </div>
@@ -205,8 +205,8 @@
                         <img src="../public/images/apple1.jpg" alt="" />
                         <div class="card-body">
                             <div class="card-body-cont">
-                                <h1>Chemical-free</h1>
-                                <p>Apples (Kashmir)</p>
+                               <h3>Chemical-free</h3>
+                                <p>Apples<br>(Kashmir)</p>
                             </div>
                         </div>
                     </div>
@@ -214,8 +214,8 @@
                         <img src="../public/images/banana1.jpg" alt="" />
                         <div class="card-body">
                             <div class="card-body-cont">
-                                <h1>Chemical-free</h1>
-                                <p>Banana(Jalgaon)</p>
+                                <h3>Chemical-free</h3>
+                                <p>Banana<br>(Jalgaon)</p>
                             </div>
                         </div>
                     </div>
@@ -223,7 +223,7 @@
                         <img src="../public/images/strawberry.jpg" alt="" />
                         <div class="card-body">
                             <div class="card-body-cont">
-                                <h1>Chemical-free</h1>
+                                <h3>Chemical-free</h3>
                                 <p>Strawberry<br />(Mahabaleshwar)</p>
                             </div>
                         </div>
@@ -232,7 +232,7 @@
                         <img src="../public/images/mango3.jpg" alt="" />
                         <div class="card-body">
                             <div class="card-body-cont">
-                                <h1>Chemical-free</h1>
+                                <h3>Chemical-free</h3>
                                 <p>Mango<br />(Varanasi)</p>
                             </div>
                         </div>
@@ -241,7 +241,7 @@
                         <img src="../public/images/Pomegranate.jpg" alt="" />
                         <div class="card-body">
                             <div class="card-body-cont">
-                                <h1>Chemical-free</h1>
+                                <h3>Chemical-free</h3>
                                 <p>Pomegranate<br />(Barmer)</p>
                             </div>
                         </div>
@@ -250,8 +250,63 @@
                         <img src="../public/images/orange1.jpg" alt="" />
                         <div class="card-body">
                             <div class="card-body-cont">
-                                <h1>Chemical-free</h1>
+                                <h3>Chemical-free</h3>
                                 <p>Orange<br />(Nagpur)</p>
+                            </div>
+                        </div>
+                    </div>
+                
+                    <div class="card-img">
+                        <img src="../public/images/tamatoes.jpg" alt="" />
+                        <div class="card-body">
+                            <div class="card-body-cont">
+                                <h3>Chemical-free</h3>
+                                <p>Tomatoes</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-img">
+                        <img src="../public/images/onion.jpg" alt="" />
+                        <div class="card-body">
+                            <div class="card-body-cont">
+                                <h3>Chemical-free</h3>
+                                <p>Onion</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-img">
+                        <img src="../public/images/potato1.jpg" alt="" />
+                        <div class="card-body">
+                            <div class="card-body-cont">
+                                <h3>Chemical-free</h3>
+                                <p>Potato</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-img">
+                        <img src="../public/images/bitter-gourd.jpg" alt="" />
+                        <div class="card-body">
+                            <div class="card-body-cont">
+                                <h3>Chemical-free</h3>
+                                <p>Bitter-Gourd</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-img">
+                        <img src="../public/images/garlic.jpg" alt="" />
+                        <div class="card-body">
+                            <div class="card-body-cont">
+                                <h3>Chemical-free</h3>
+                                <p>Garlic</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-img">
+                        <img src="../public/images/cacumber.jpg" alt="" />
+                        <div class="card-body">
+                            <div class="card-body-cont">
+                                <h3>Chemical-free</h3>
+                                <p>Cucumber</p>
                             </div>
                         </div>
                     </div>
