--- a/regitration-login/login.html
+++ b/regitration-login/login.html
@@ -42,6 +42,9 @@
             </dl>
             <button class="btn btn-dark w-100 form-control">Login</button>
         </div>
+        <div>
+            <a href="#">Forget Password</a>
+        </div>
     </form>
 </body>
 </html>
