--- a/movie-ticket/movie-ticket-booking.html
+++ b/movie-ticket/movie-ticket-booking.html
@@ -52,7 +52,10 @@
 </head>
 
 <body class="container-fluid">
-    <button class="btn btn-danger w-25 p-2 mt-2" data-bs-target="#booking" data-bs-toggle="modal">Quick Booking</button>
+    <div class="p-2 mt-2">
+        <button class="btn btn-danger w-25"  data-bs-target="#booking" data-bs-toggle="modal">Quick Booking</button>
+            <a href="../swadeshi-order/Register-login.html" class="bi bi-person text-light form-control-lg "></a>
+    </div>
     <div class="modal fade" id="booking">
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
