--- a/regitration-login/login.html
+++ b/regitration-login/login.html
@@ -38,12 +38,12 @@
                 <dt>User Name</dt>
                 <dd><input type="text" class="form-control"/></dd>
                 <dt>Password</dt>
-                <dd><input type="password" class="form-control"/></dd>
+                <dd><input type="password"  class="form-control"/></dd>
             </dl>
             <button class="btn btn-dark w-100 form-control">Login</button>
         </div>
         <div>
-            <a href="#">Forget Password</a>
+            <a href="#" class="bi bi-info-circle text-2-subtitle text-decoration-none me-2"> Forget Password</a>
         </div>
     </form>
 </body>
