--- a/shopping-api/fakestore-api.html
+++ b/shopping-api/fakestore-api.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fakestore | Shopping</title>
+    <link href="../public/images/fakestore.png" rel="shortcut icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -114,7 +115,7 @@
                         var div = document.createElement("div");
                         div.className = "card p-2";
                         div.style.width = "280px";
-                        div.style.margin="10px";
+                        div.style.margin = "10px";
                         div.innerHTML = `
                        <img src=${product.image} class="card-img-top" height="150">
                        <div class="card-header" style="height:90px; overflow:auto">
@@ -206,9 +207,8 @@
                 class="me-3"><span>Women's Fashion</span></a>
         </nav>
         <div class="fs-4">
-            <button data-bs-target="#cart" data-bs-toggle="modal" onclick="ShowCartClick()"
-                class="btn position-relative btn-warning bi bi-cart2"> Your Cart <span id="lblCount"
-                    class="badge rounded rounded-circle bg-danger text-white position-absolute"></span> </button>
+            <a href="../swadeshi-order/Register-login.html" class="bi bi-person-fill"></a>
+            <button data-bs-target="#cart" data-bs-toggle="modal" onclick="ShowCartClick()" class="btn position-relative btn-warning bi bi-cart2"> Your Cart <span id="lblCount" class="badge rounded rounded-circle bg-danger text-white position-absolute"></span> </button>
             <div class="modal fade" id="cart">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -229,11 +229,11 @@
 
                                 </tbody>
                                 <tfooter>
-                                   
-                                        <td><button class="btn btn-outline-primary">Confirm Order</button></td>
-                                        <td><button class="btn btn-outline-warning">Add More</button></td>
-                                        <td><button class="btn btn-outline-danger">Cancel Order</button></td>
-                                  
+
+                                    <td><button class="btn btn-outline-primary">Confirm Order</button></td>
+                                    <td><button class="btn btn-outline-warning">Add More</button></td>
+                                    <td><button class="btn btn-outline-danger">Cancel Order</button></td>
+
                                 </tfooter>
                             </table>
                         </div>
