--- a/movie-ticket/confirm-ticket.html
+++ b/movie-ticket/confirm-ticket.html
@@ -33,10 +33,10 @@
 </head>
 <body>
 <div>
-    <h3>Your Order Confirm Successfully...</h3>
+    <h3>Your Movie Ticket's Confirm Successfully...</h3>
 </div>   
 <div>
-    <a href="./swadeshi-order.html"><button class="btn btn-primary">Back Home</button></a>
+    <a href="./movie-ticket-booking.html"><button class="btn btn-primary">Back Home</button></a>
 </div>
 </body>
 </html>
