--- a/movie-ticket/movie-ticket-booking.html
+++ b/movie-ticket/movie-ticket-booking.html
@@ -33,7 +33,7 @@
             flag=confirm("Are you sure?\nDo you want to Regitration/Login");
      if(flag==true)
      {
-        document.write("<font color='red'><h1><a href='../regitration-login/regitration.html'>Registration</a></h1><h1><a href='../regitration-login/login.html'>Login</a></h1></font>")
+        document.write("<font color='red'><h1><a href='./register.html'>Registration</a></h1><h1><a href='../regitration-login/login.html'>Login</a></h1></font>")
      }
          }
         
