--- a/hotel-booking/rajasthan-hotel.html
+++ b/hotel-booking/rajasthan-hotel.html
@@ -119,7 +119,7 @@ document.getElementById("lblTotal").innerHTML=lblTotal.toLocaleString(`en-in`,{s
                       <dd id="lblAmount"></dd>
                       <dt>Total</dt>
                       <dd id="lblTotal"></dd>
-                      <a href=""><button class="btn btn-outline-primary">Pay Amount</button></a>
+                      <a href="payment.html"><button class="btn btn-outline-primary">Pay Amount</button></a>
                     </dl>
                   </div>
                   <div class="col">
