--- a/farmes-brand/farmers-brand.html
+++ b/farmes-brand/farmers-brand.html
@@ -584,10 +584,10 @@
                 are the main source of a balanced diet.
             </p>
             <div class="footer-icons">
-                <i class="bi bi-facebook"></i>
-                <i class="bi bi-twitter"></i>
-                <i class="bi bi-linkedin"></i>
-                <i class="bi bi-instagram"></i>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
             </div>
         </div>
         <div class="footer1">
