--- a/farmes-brand/farmers-brand.html
+++ b/farmes-brand/farmers-brand.html
@@ -584,7 +584,7 @@
                 are the main source of a balanced diet.
             </p>
             <div class="footer-icons">
-                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-twitter-x"></i></a>
                 <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-linkedin"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
