--- a/shopping-api/fakestore-api.html
+++ b/shopping-api/fakestore-api.html
@@ -13,6 +13,9 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <style>
+        .fs-4 a:hover{
+            color: blue;
+        }
         a {
             text-decoration: none;
             color: black;
@@ -124,7 +127,7 @@
                        <div class="card-body">
                          <dl>
                             <dt>Price</dt>
-                            <dd>${product.price}</dd>
+                            <dd>₹ ${product.price}</dd>
                             <dt>Rating</dt>
                             <dd>${product.rating.rate} <span class="bi bi-star-fill text-sucess"></span> [${product.rating.count}] </dd>
                          </dl>
