--- a/farmes-brand/farmers-brand.html
+++ b/farmes-brand/farmers-brand.html
@@ -98,7 +98,7 @@
     <div class="position">
         <a href=""><span class="bi bi-instagram"></span></a><br>
         <span class="bi bi-youtube"></span><br>
-        <span class="bi bi-envelope-fill"></span><br>
+        <a href="mailto:rohitpatil15121998@gmail.com"><span class="bi bi-envelope-fill"></span></a><br>
         <a href="//wa.me/8517809277"><span class="bi bi-telephone-fill"></span></a>
     </div>
     <!-- About Us Section -->
