--- a/video-library/video-library.html
+++ b/video-library/video-library.html
@@ -35,6 +35,9 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
+        .container:hover{
+            box-shadow: 1px 1px 10px 1px lightslategray;
+        }
 
         h1 {
             margin-bottom: 20px;
