--- a/nasa-api/mars-api.html
+++ b/nasa-api/mars-api.html
@@ -11,6 +11,13 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
         <link href="../public/images/n.png" rel="shortcut icon">
+        <style>
+            footer{
+                height: 200px;
+                width: 100%;
+                background-color: antiquewhite;
+            }
+        </style>
 
     <script type="text/javascript">
         function bodyload(){
@@ -45,5 +52,8 @@
     <main class="d-flex flex-wrap">
 
     </main> 
+    <footer>
+
+    </footer>
 </body>
 </html>
