--- a/nasa-api/mars-api.html
+++ b/nasa-api/mars-api.html
@@ -53,7 +53,10 @@
 
     </main> 
     <footer>
-
+        <div class="3fr p-5 ">
+            <h2>Mars API</h2>
+        </div>
+        <div class="col-9fr"></div>
     </footer>
 </body>
 </html>
