--- a/nasa-api/mars-api.html
+++ b/nasa-api/mars-api.html
@@ -16,6 +16,12 @@
                 height: 200px;
                 width: 100%;
                 background-color: antiquewhite;
+                padding: 5px;
+                
+            }
+            footer div{
+                margin-top: 5px;
+                padding: 40px;
             }
         </style>
 
@@ -52,11 +58,19 @@
     <main class="d-flex flex-wrap">
 
     </main> 
-    <footer>
-        <div class="3fr p-5">
+    <footer class="d-flex justify-content-between">
+        <div class="col-3fr">
             <h2>Mars API</h2>
         </div>
-        <div class="col-9fr"></div>
+        <div class="col-3fr">
+            <h5>Contact</h5>
+        </div>
+        <div class="col-3fr">
+            <h5>Support</h5>
+        </div>
+        <div class="col-3fr">
+            <h5>Help</h5>
+        </div>
     </footer>
 </body>
 </html>
