--- a/nasa-api/mars-api.html
+++ b/nasa-api/mars-api.html
@@ -24,8 +24,8 @@
                 margin-top: 5px;
                 padding: 40px;
             }
-            footer div ul li{
-                
+            footer li{
+                list-style: none;
             }
         </style>
 
