--- a/nasa-api/mars-api.html
+++ b/nasa-api/mars-api.html
@@ -70,10 +70,9 @@
         <div class="col-3fr">
             <h5>Contact</h5>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <h6>+918517809277</h6>
+            <li>marsrover@gamil.com</li>
+          
           </ul>
         </div>
         <div class="col-3fr">
@@ -88,10 +87,7 @@
         <div class="col-3fr">
             <h5>Help</h5>
            <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li class="bi bi-question"></li>
            </ul>
         </div>
     </footer>
