--- a/nasa-api/mars-api.html
+++ b/nasa-api/mars-api.html
@@ -77,6 +77,7 @@
         </div>
         <div class="col-3fr">
             <h5>Support</h5>
+            <li>Rovers</li>
             <ul>
              <li>Query</li>
              <li></li>
