--- a/hotel-booking/processing.html
+++ b/hotel-booking/processing.html
@@ -45,6 +45,12 @@
          h1:hover{
             color: red;
          }
+         a{
+            position: fixed;
+            bottom:30px;
+            right: 0%;
+         }
+
        </style>
 </head>
 <body>
@@ -64,7 +70,7 @@
             <span style="--spinner:12;"></span>
             <h1>Fetching Data</h1>
         </div>
-        <a href="./rajasthan-hotel.html"><button class="btn btn-primary">Back Home</button></a>
+        <a href="./rajasthan-hotel.html"><button class="btn btn-danger">Cancel Payment</button></a>
 
         
 </body>
